--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,20 @@
         <artifactId>jackson-xc</artifactId>
         <version>1.9.13</version>
     </dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+    <dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    </dependency>
+
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-entitymanager</artifactId>
+    </dependency>
     
 	</dependencies>
 
@@ -88,6 +102,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>online_banking_system</finalName>
 	</build>
 
 	<repositories>
